--- a/.github/workflows/flask_postgres.yml
+++ b/.github/workflows/flask_postgres.yml
@@ -33,6 +33,14 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r server/requirements.txt
+
+    - name: Create .env file
+      run: |
+        echo "SECRET_KEY= ${{ secrets.SECRET_KEY }}" >> .env
+        echo "DATABASE_URL=${{ vars.DATABASE_URL }}" >> .env
+        echo "SERVER_NAME=${{ vars.SERVER_NAME }}" >> .env
+        echo "UPLOAD_FOLDER=uploads" >> .env
+        echo "MAX_CONTENT_LENGTH=16777216" >> .env
         
     - name: Run tests
       run: |
