--- a/.github/workflows/flask_postgres.yml
+++ b/.github/workflows/flask_postgres.yml
@@ -1,4 +1,4 @@
-name: CI/CD for Flask App with PostgreSQL
+name: server_CI
 
 on:
   push:
@@ -49,3 +49,6 @@ jobs:
       run: |
         export $(cat server/app/.env | xargs)
         python -m pytest server/tests/
+
+    - name: Run Flask application
+      run: python server/run.py
