--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.1.4",
     "@vue/test-utils": "^2.4.6",
+    "jest": "^29.7.0",
     "jsdom": "^25.0.1",
     "msw": "^2.4.11",
     "vite": "^5.4.8",
