Base image for client changed to node:14

--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,12 +1,10 @@
-FROM ubuntu:latest
+# syntax=docker.io/docker/dockerfile:1.7-labs
+
+FROM node:14
 
 WORKDIR /app
 
-RUN apt-get update
-RUN apt install -y npm
-RUN apt install -y xsel
-
-COPY . /app
+COPY --exclude=*node_modules* . /app
 RUN npm install
 RUN npm install -g serve
 
@@ -15,4 +13,3 @@ RUN npm run build
 EXPOSE 5015
 
 CMD ["serve", "-s", "dist"]
-#CMD ["npm", "run", "dev"]
