--- a/.github/workflows/server.yml
+++ b/.github/workflows/server.yml
@@ -42,13 +42,13 @@ jobs:
         echo "UPLOAD_FOLDER=uploads" >> server/app/.env
         echo "MAX_CONTENT_LENGTH=16777216" >> server/app/.env
         
-    - name: Run tests
+    - name: Run tests and generate coverage report
       env:
         FLASK_ENV: testing
         FLASK_CONFIG: config.TestConfig
       run: |
         export $(cat server/app/.env | xargs)
-        python -m pytest server/tests/
+        python -m pytest server/tests/ --cov=server --cov-report=xml
 
     - name: SonarQube Scan
       uses: sonarsource/sonarqube-scan-action@master
