--- a/.github/workflows/server.yml
+++ b/.github/workflows/server.yml
@@ -62,16 +62,20 @@ jobs:
     needs: test
     runs-on: ubuntu-latest
     steps:
-      - name: Set up SonarQube
-        uses: sonarsource/sonar-scanner-action@master
-      - name: Run SonarQube analysis
-        env:
-          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
-          SONAR_USER_HOME: "${{ github.workspace }}/agent/sonar"
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+      
+      - name: Set up SonarQube Scanner
+        uses: sonarsource/sonar-scanner-cli@master
+        with:
+          args: "-Dsonar.host.url=${{ secrets.SONAR_HOST_URL }} -Dsonar.login=${{ secrets.SONAR_TOKEN }}"
+      
+      - name: Run SonarQube Analysis
         run: |
           sonar-scanner \
-            -Dsonar.host.url="${{ secrets.SONAR_HOST_URL }}" \
-            -Dsonar.login="${{ secrets.SONAR_TOKEN }}"  
+            -Dsonar.host.url=${{ secrets.SONAR_HOST_URL }} \
+            -Dsonar.login=${{ secrets.SONAR_TOKEN }}
   build:
     needs: test
     runs-on: ubuntu-latest
