--- a/.github/workflows/client_blank.yml
+++ b/.github/workflows/client_blank.yml
@@ -22,6 +22,8 @@ jobs:
           npm install
 
       - name: Run tests
+        env:
+          VITE_SERVER_CONNECT_STRING: "http://127.0.0.1:5015"
         run: |
           cd /home/runner/work/travelfriend_app/travelfriend_app/client
           echo $(ls)
@@ -35,12 +37,16 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Install dependencies and modules
+        env:
+          VITE_SERVER_CONNECT_STRING: "http://127.0.0.1:5015"
         run: |
           cd /home/runner/work/travelfriend_app/travelfriend_app/client
           echo $(ls)
           npm install
 
       - name: Build application
+        env:
+          VITE_SERVER_CONNECT_STRING: "http://127.0.0.1:5015"
         run: |
           cd /home/runner/work/travelfriend_app/travelfriend_app/client
           echo $(ls)
