--- a/.github/workflows/sonarqube.yml
+++ b/.github/workflows/sonarqube.yml
@@ -10,10 +10,10 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Set up JDK (для Java) или Python (для Python)
-        uses: actions/setup-java@v3  # Или actions/setup-python@v4
+        uses: actions/setup-python@v4
         with:
-          java-version: '17'  # Укажи нужную версию JDK
-          # python-version: '3.9'  # Для Python
+          # java-version: '17'  # Укажи нужную версию JDK
+          python-version: '3.9'  # Для Python
 
       - name: Install sonar-scanner
         run: |
