--- a/.github/workflows/sonarqube.yml
+++ b/.github/workflows/sonarqube.yml
@@ -76,7 +76,10 @@ jobs:
           curl -u ${{ secrets.SONAR_TOKEN }}: \
                -X GET "${{ secrets.SONAR_HOST_URL }}/api/qualitygates/project_status?projectKey=$SONAR_PROJECT_KEY" \
                -o qualitygate.json
-          if grep -q '"status":"ERROR"' qualitygate.json; then
+          result=$(grep '"status":"ERROR"' qualitygate.json)
+          if [ -n "$result" ]; then
             echo "Quality Gate failed!"
             exit 1
+          else 
+            echo "Quality Gate passed!"
           fi
