--- a/.github/workflows/sonarqube.yml
+++ b/.github/workflows/sonarqube.yml
@@ -78,6 +78,8 @@ jobs:
           projectstatus=$(echo "$response" | jq -r '.projectStatus.status')
           if [ "$projectstatus" = "ERROR" ]; then
             echo "Quality Gate failed!"
+            echo "$projectstatus"
+            echo "$response"
             exit 1
           else 
             echo "Quality Gate passed!"
