--- a/.github/workflows/server_ci.yml
+++ b/.github/workflows/server_ci.yml
@@ -139,26 +139,16 @@ jobs:
     needs: push 
     runs-on: ubuntu-latest
     steps:
-      - name: Install And Set up yc-cli
+      - name: Install kubectl
         run: |
-          sudo apt-get update
-          sudo apt-get install -y curl
-          curl -sSL https://storage.yandexcloud.net/yandexcloud-yc/install.sh | bash
-          printf ${{ secrets.YC_TOKEN }}'\n2\nn\n' | ~/yandex-cloud/bin/yc init
-          ~/yandex-cloud/bin/yc vpc address list
-
-      - name: Install And Set up kubectl
-        env:
-          K8S_BASE_URL: ${{ secrets.K8S_BASE_URL }}
-          K8S_CA_DATA: ${{ secrets.K8S_CA_DATA }}
-          K8S_USER_TOKEN: ${{ secrets.K8S_USER_TOKEN }}
+          curl -LO "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl"
+          chmod +x kubectl
+          sudo mv kubectl /usr/local/bin/
+      
+      - name: Configure kubectl
         run: |
-          curl -LO https://dl.k8s.io/release/`curl -LS https://dl.k8s.io/release/stable.txt`/bin/linux/amd64/kubectl
-          sudo chmod +x ./kubectl
-          mv ./kubectl /usr/local/bin/kubectl
-          kubectl version --client
-          export K8S_BASE_URL=$K8S_BASE_URL && export K8S_CA_DATA=$K8S_CA_DATA && export K8S_USER_TOKEN=$K8S_USER_TOKEN
-
-      - name: Restart server deployment
-        run: |
-          kubectl rollout restart deployment server
+          mkdir -p ~/.kube
+          echo "${{ secrets.KUBE_CONFIG }}" > ~/.kube/config
+      
+      - name: Restart deployment
+        run: kubectl rollout restart deployment server
