--- a/.github/workflows/server_ci.yml
+++ b/.github/workflows/server_ci.yml
@@ -139,20 +139,21 @@ jobs:
     needs: push 
     runs-on: ubuntu-latest
     steps:
-      - name: Install kubectl
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y curl
-          curl -sSL https://storage.yandexcloud.net/yandexcloud-yc/install.sh | bash
-          printf ${{ secrets.YC_TOKEN }}'\n2\nn\n' | ~/yandex-cloud/bin/yc init
-          ~/yandex-cloud/bin/yc vpc address list
-      - name: Install And Set up kubectl
-        env:
+    - name: Checkout code
+      uses: actions/checkout@v3
+    - name: Install kubectl
+      run: |
+        curl -LO "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl"
+        chmod +x kubectl
+        sudo mv kubectl /usr/local/bin/
+
+    - name: Restart deployment
+      env:
           K8S_BASE_URL: ${{ secrets.K8S_BASE_URL }}
           K8S_CA_DATA: ${{ secrets.K8S_CA_DATA }}
           K8S_USER_TOKEN: ${{ secrets.K8S_USER_TOKEN }}
-        run: |
-          curl -LO https://dl.k8s.io/release/`curl -LS https://dl.k8s.io/release/stable.txt`/bin/linux/amd64/kubectl
-          export K8S_BASE_URL=$K8S_BASE_URL && export K8S_CA_DATA=$K8S_CA_DATA && export K8S_USER_TOKEN=$K8S_USER_TOKEN
-      - name: Restart server deployment
-        run: kubectl rollout restart deployment server
+      run: |
+        kubectl --server=$K8S_BASE_URL:6443 \
+                --certificate-authority=<(echo "$K8S_CA_DATA" | base64 --decode) \
+                --token=$K8S_USER_TOKEN \
+                rollout restart deployment server
