--- a/.github/workflows/client_blank.yml
+++ b/.github/workflows/client_blank.yml
@@ -4,8 +4,6 @@ on:
   push:
     branches:
       - master
-    paths:
-      - client/**
 
 jobs:
   test:
@@ -16,7 +14,7 @@ jobs:
 
       - name: Install dependencies and modules
         run: |
-          cd /home/runner/work/travelfriend_app/travelfriend_app/client
+          cd ./client
           echo $(ls)
           npm install
           npm install vitest@latest
@@ -26,7 +24,7 @@ jobs:
         env:
           VITE_SERVER_CONNECT_STRING: "http://127.0.0.1:5015"
         run: |
-          cd /home/runner/work/travelfriend_app/travelfriend_app/client
+          cd ./client
           echo $(ls)
           npm run test:unit
 
@@ -34,7 +32,7 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: coverage-report
-          path: /home/runner/work/travelfriend_app/travelfriend_app/client/coverage
+          path: ./client/coverage
           
   sonarqube:
     needs: test
@@ -47,7 +45,7 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           name: coverage-report
-          path: /home/runner/work/travelfriend_app/travelfriend_app/client/coverage
+          path: ./client/coverage
 
       - name: SonarQube Scan
         uses: SonarSource/sonarqube-scan-action@master
@@ -56,7 +54,7 @@ jobs:
           SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
         with:
           args: >
-            -Dsonar.javascript.lcov.reportPaths=/home/runner/work/travelfriend_app/travelfriend_app/client/coverage/lcov.info
+            -Dsonar.javascript.lcov.reportPaths=./client/coverage/lcov.info
             -Dsonar.sources=client/
             -sonar.coverage.exclusions=**/*.js,client/src/App.vue
           
@@ -71,7 +69,7 @@ jobs:
         env:
           VITE_SERVER_CONNECT_STRING: "http://127.0.0.1:5015"
         run: |
-          cd /home/runner/work/travelfriend_app/travelfriend_app/client
+          cd ./client
           echo $(ls)
           npm install
 
@@ -79,7 +77,7 @@ jobs:
         env:
           VITE_SERVER_CONNECT_STRING: "http://127.0.0.1:5015"
         run: |
-          cd /home/runner/work/travelfriend_app/travelfriend_app/client
+          cd ./client
           echo $(ls)
           npm run build
 
