--- a/.github/workflows/client_CI.yml
+++ b/.github/workflows/client_CI.yml
@@ -2,8 +2,11 @@ name: client_CI
 
 on:
   push:
-    branches:
-      - master
+    branches: [ "main", "feature/client" ]
+  pull_request:
+    branches: [ "main", "feature/client" ]
+
+  workflow_dispatch:
 
 jobs:
   test:
@@ -14,7 +17,7 @@ jobs:
 
       - name: Install dependencies and modules
         run: |
-          cd ./client
+          cd /home/runner/work/travelfriend_app/travelfriend_app/client
           echo $(ls)
           npm install
           npm install vitest@latest
@@ -24,7 +27,7 @@ jobs:
         env:
           VITE_SERVER_CONNECT_STRING: "http://127.0.0.1:5015"
         run: |
-          cd ./client
+          cd /home/runner/work/travelfriend_app/travelfriend_app/client
           echo $(ls)
           npm run test:unit
 
@@ -32,8 +35,7 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: coverage-report
-          path: ./client/coverage
-          
+          path: /home/runner/work/travelfriend_app/travelfriend_app/client/coverage
   sonarqube:
     needs: test
     runs-on: ubuntu-latest
@@ -45,7 +47,7 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           name: coverage-report
-          path: ./client/coverage
+          path: /home/runner/work/travelfriend_app/travelfriend_app/client/coverage
 
       - name: SonarQube Scan
         uses: SonarSource/sonarqube-scan-action@master
@@ -54,7 +56,7 @@ jobs:
           SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
         with:
           args: >
-            -Dsonar.javascript.lcov.reportPaths=./client/coverage/lcov.info
+            -Dsonar.javascript.lcov.reportPaths=/home/runner/work/travelfriend_app/travelfriend_app/client/coverage/lcov.info
             -Dsonar.sources=client/
             -Dsonar.coverage.exclusions=**/*.js,client/src/App.vue
           
@@ -69,7 +71,7 @@ jobs:
         env:
           VITE_SERVER_CONNECT_STRING: "http://127.0.0.1:5015"
         run: |
-          cd ./client
+          cd /home/runner/work/travelfriend_app/travelfriend_app/client
           echo $(ls)
           npm install
 
@@ -77,6 +79,6 @@ jobs:
         env:
           VITE_SERVER_CONNECT_STRING: "http://127.0.0.1:5015"
         run: |
-          cd ./client
+          cd /home/runner/work/travelfriend_app/travelfriend_app/client
           echo $(ls)
           npm run build
