--- a/.github/workflows/server_ci.yml
+++ b/.github/workflows/server_ci.yml
@@ -57,7 +57,7 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: coverage-report
-          path: coverage.xml
+          path: /home/runner/work/travelfriend_app/travelfriend_app/coverage.xml
           
   sonarqube:
     needs: test
@@ -67,7 +67,7 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           name: coverage-report
-          path: coverage.xml
+          path:  /home/runner/work/travelfriend_app/travelfriend_app/coverage.xml
           
       - name: Checkout code
         uses: actions/checkout@v3
@@ -88,7 +88,7 @@ jobs:
             -Dsonar.sources=server/ \
             -Dsonar.host.url=$SONAR_HOST_URL \
             -Dsonar.login=$SONAR_TOKEN \
-            -Dsonar.python.coverage.reportPaths=coverage.xml  # Для Python
+            -Dsonar.python.coverage.reportPaths=/home/runner/work/travelfriend_app/travelfriend_app/coverage.xml  # Для Python
   build:
     needs: sonarqube
     runs-on: ubuntu-latest
