--- a/.github/workflows/server_ci.yml
+++ b/.github/workflows/server_ci.yml
@@ -8,7 +8,7 @@ on:
       - server/**
 
 jobs:
-  test:
+  test-and-analyze:
     runs-on: ubuntu-latest
     
     services:
@@ -24,6 +24,13 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
+
+      - name: Install sonar-scanner
+        run: |
+          SONAR_SCANNER_VERSION=5.0.1.3006 
+          wget https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-${SONAR_SCANNER_VERSION}-linux.zip
+          unzip sonar-scanner-cli-${SONAR_SCANNER_VERSION}-linux.zip
+          echo "$(pwd)/sonar-scanner-${SONAR_SCANNER_VERSION}-linux/bin" >> $GITHUB_PATH
       
       - name: Set up Python
         uses: actions/setup-python@v3
@@ -52,34 +59,6 @@ jobs:
           export $(cat server/app/.env | xargs)
           coverage run -m pytest server/tests/
           coverage xml
-          ls -la  # Проверяем, что файл создан
-          chmod 644 coverage.xml  # Делаем файл доступным для чтения
-
-      - name: Archive coverage report
-        uses: actions/upload-artifact@v3
-        with:
-          name: coverage-report
-          path: ./coverage.xml
-          
-  sonarqube:
-    needs: test
-    runs-on: ubuntu-latest
-    steps:
-      - name: Download coverage report
-        uses: actions/download-artifact@v3
-        with:
-          name: coverage-report
-          path: ./coverage.xml
-          
-      - name: Checkout code
-        uses: actions/checkout@v3
-        
-      - name: Install sonar-scanner
-        run: |
-          SONAR_SCANNER_VERSION=5.0.1.3006 
-          wget https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-${SONAR_SCANNER_VERSION}-linux.zip
-          unzip sonar-scanner-cli-${SONAR_SCANNER_VERSION}-linux.zip
-          echo "$(pwd)/sonar-scanner-${SONAR_SCANNER_VERSION}-linux/bin" >> $GITHUB_PATH
 
       - name: Run sonar-scanner
         env:
@@ -92,7 +71,7 @@ jobs:
             -Dsonar.login=$SONAR_TOKEN \
             -Dsonar.python.coverage.reportPaths=coverage.xml  # Для Python
   build:
-    needs: sonarqube
+    needs: test-and-analyze
     runs-on: ubuntu-latest
     
     services:
